Hopefully fixed overflow issue with modal.
Fixed bug with navbar scripts not being included.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,3 +10,7 @@ html {
     box-shadow: 0 3px 2px hsl(0, 0%, 30%);
     padding: 1em;
 }
+
+.modal-card.modal-comments {
+    max-height: calc(100vh - 100px);
+}
